made 90% of the app

--- a/Store Project/View/ImageCView.xib
+++ b/Store Project/View/ImageCView.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="267" height="199"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NcL-W2-5ON">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NcL-W2-5ON">
                         <rect key="frame" x="0.0" y="0.0" width="267" height="199"/>
                     </imageView>
                 </subviews>
